<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/insert_notes"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginBottom="10sp"
        android:background="#127E89"
        android:textColor="#FFF"/>

    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note_title"
        android:background="@drawable/edittext_background"
        android:layout_marginBottom="5sp"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/descriptionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note_description"
        android:background="@drawable/edittext_background"
        android:inputType="textMultiLine"
        android:lines="5"
        android:maxLines="10"
        android:minLines="5"
        android:scrollbars="vertical"
        android:overScrollMode="always"
        android:textSize="20sp"
        android:layout_marginBottom="20sp"/>

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_note"
        android:layout_gravity="center"/>

</LinearLayout>